<resources>
    <string name="app_name">Nfcpp</string>
    <string name="hello_nfc">NFC</string>
    <string name="hello_check_in">Check-in</string>
    <string name="login_user">Sing In</string>
    <string name="register_user">Sing Up</string>
    <string name="login_test_user">Demo mode</string>
    <string name="logout">Logout</string>
    <string name="my_statistics">My History</string>
    <string name="my_profile">My Profile</string>
    <string name="today_events">Events today:</string>
    <string name="total_time">Total time:</string>
    <string name="empty_admin_list">Empty List</string>
    <string name="sign_in_login_hint">Login</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_buton">Sign in</string>
    <string name="first_name_field_title">First name</string>
    <string name="last_name_field_title">Last name</string>
    <string name="login_field_title">Login</string>
    <string name="password_field_title">Password</string>
    <string name="sign_up_buutton_text">Sign up</string>
    <string name="item_menu_admin_titlee">Add new place</string>
    <string name="input_new_place_hint">Input new place</string>
    <string name="input_description">Input description</string>
    <string name="bring_card_hint">Bring a card up to a smartphone</string>
    <string name="id_card_text">ID card</string>
    <string name="description_text">description</string>
    <string name="setting_menu_tutorial_title_item">Tutorial</string>
    <string name="setting_menu_main_title_item">Main menu</string>
    <string name="setting_menu_sync_title_item">Sync</string>
    <string name="setting_menu_log_out_title_item">Log out</string>
    <string name="user_name_list_column_tv">User name</string>
    <string name="user_total_time_list_column">Total time</string>
    <string name="enter_card_name">Enter card name</string>
    <string name="enter_description">Enter description</string>
    <string name="users_rb">Users</string>
    <string name="cards_rb">Cards</string>

    <string name="message_invalid_card_to_exit">Invalid card to exit</string>
    <string name="message_admin_no_added_card">Scan new card</string>
    <string name="message_admin_card_already">This card is already there</string>
    <string name="message_unknown_card">Unknown card</string>
    <string name="scan_card_text_view">Scan or input card</string>
    <string name="cancel_create_card_btn">cancel</string>
    <string name="button_save">save</string>
    <string name="card_column_id">ID</string>
    <string name="card_name_column">Card name</string>

    <string name="lost_data_dialog">All unsaved data will be lost. Proceed?</string>
    <string name="dialog_button_yes">YES</string>
    <string name="dialog_button_no">NO</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_old_password_field_title">Old password</string>
    <string name="dialog_new_password_field_title">New password</string>
    <string name="dialog_confirm_password_field_title">Confirm password</string>

    <string name="fragment_my_profile_edit_btn">edit</string>
    <string name="fragment_my_profile_title">My Profile</string>
    <string name="fragment_my_profile_password_field">********</string>

    <string name="fragment_edit_profile_title">Edit Profile</string>

    <string name="message_error_empty_field">The field can not be empty</string>
    <string name="message_error_size_login">The minimum length is 5 characters</string>
    <string name="message_error_size_password">The minimum length is 8 characters</string>
    <string name="message_error_size_firstname">The minimum length is 2 characters</string>
    <string name="message_error_password_not_match">Passwords do not match</string>
    <string name="message_error_old_password_incorrect">the old password is incorrect</string>
    <string name="message_error_check_internet">Please check the Internet connection</string>

    <string name="objectid_test_user">test-user-test-user</string>

    <string name="loggen_another_device">Logged on another device!</string>

    <string name="registry_error_user_already_exists">Unable to register user. User already exists.</string>
    <string name="registry_error_user_already_exists_choose_another_login">User already exists. Please choose another login</string>
    <string name="error_unable_host">Unable to resolve host</string>
    <string name="error_registry_unable_host">Please check the Internet connection. The registration is not possible without the Internet</string>
    <string name="error_login_unable_host">Please check the Internet connection</string>
    <string name="error_invalid_login_password">Invalid login or password</string>
    <string name="error_invalid_login_password_please_register">User does not exist. To proceed please register</string>

    <string name="name_digit_parameter">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="login_password_digit_parameter">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_0123456789-.</string>


</resources>
