<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/enter_card_name"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/place_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:text="@string/enter_description"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/description_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/scan_card_text_view"
        android:layout_width="wrap_content"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/showIdcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/save_new_place_button"
        android:text="@string/button_save"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/button_cancel_card_edit"
        android:text="@string/cancel_create_card_btn"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
</LinearLayout>