<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/fragment_edit_profile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fragment_edit_profile_title"
        android:textColor="@android:color/black"
        android:textSize="25dp" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_edit_profile_first_name_wrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/fragment_edit_profile_first_name_edit_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/name_digit_parameter"
            android:hint="@string/first_name_field_title"
            android:inputType="textNoSuggestions"
            android:maxLength="20" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_edit_profile_last_name_wrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/fragment_edit_profile_last_name_edit_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/name_digit_parameter"
            android:hint="@string/last_name_field_title"
            android:inputType="textNoSuggestions"
            android:maxLength="30" />
    </android.support.design.widget.TextInputLayout>




    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/password_field_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fragment_edit_profile_password_view_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:text="@string/fragment_my_profile_password_field"
                android:textSize="18dp" />

            <ImageView
                android:id="@+id/fragment_edit_profile_password_image_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_view" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/fragment_edit_profile_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:text="@string/button_save" />

</LinearLayout>