<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">



        <android.support.design.widget.TextInputLayout
            android:id="@+id/dialog_password_old_password_wrap"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/dialog_password_old_password_edit_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="18"
                android:minWidth="250dp"
                android:digits="@string/login_password_digit_parameter"
                android:inputType="textNoSuggestions|textPassword"
                android:hint="@string/dialog_old_password_field_title"/>
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/dialog_password_new_password_wrap"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/dialog_password_new_password_edit_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="18"
                android:digits="@string/login_password_digit_parameter"
                android:inputType="textNoSuggestions|textPassword"
                android:hint="@string/dialog_new_password_field_title"/>
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/dialog_password_confirm_password_wrap"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/dialog_password_confirm_password_edit_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="18"
                android:digits="@string/login_password_digit_parameter"
                android:inputType="textNoSuggestions|textPassword"
                android:hint="@string/dialog_confirm_password_field_title"/>
        </android.support.design.widget.TextInputLayout>



        <LinearLayout
            android:gravity="right"
            android:layout_gravity="right"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/dialog_confirmation_button_ok"
                android:text="@string/dialog_button_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>