<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">


    <TextView
        android:id="@+id/currentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="2016-03-17 20:30"
        android:textColor="@android:color/black"
        android:textSize="25dp" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/currentTime"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_time" />

        <TextView
            android:id="@+id/todayTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="00:00"
            android:textColor="@android:color/black"
            android:textSize="20dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/list_events_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="20dp"
        android:text="@string/today_events"
        android:textColor="@android:color/black" />

    <ListView
        android:id="@+id/list_events"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@+id/list_events_title"
        android:layout_above="@+id/linearLayout2" />

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout2">

        <Button
            android:id="@+id/fragment_main_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/my_statistics" />

        <Button
            android:id="@+id/fragment_main_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/my_profile" />

    </LinearLayout>


</RelativeLayout>